BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_CasePageDisplaySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this custom setting controls read only / Editable setting for Case UI Fields</description>
    <fields>
        <fullName>HSvc_AccountType__c</fullName>
        <inlineHelpText>Enterprise or Consumer</inlineHelpText>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Applicable_Country__c</fullName>
        <label>Applicable Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_FieldName__c</fullName>
        <description>Case Field Name</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Mode__c</fullName>
        <description>Mode of UI Create / Edit</description>
        <label>Mode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RecordTypeName__c</fullName>
        <description>Case Record Type Name</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_isReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_to_Tier__c</fullName>
        <label>Visible to Tier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Case Page Display Settings</label>
</CustomObject>